<resources>
    <string name="_0">0</string>
    <string name="_3points">+ 3 Points</string>
    <string name="_2points">+ 2 Points</string>
    <string name="_1points">+ Free throw</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="app_name">Score Counter</string>
    <string name="score_of_B_saved_instance">scoreOfB</string>
    <string name="score_of_A_saved_instance">scoreOfA</string>
</resources>
